<resources>
    <string name="app_name">Cadastro Legal</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="nome_obrigatorio">O nome deve ser informado</string>
    <string name="endereco_obrigatorio">O endereço deve ser informado</string>
    <string name="dtnascimento_obrigatorio">A data de nascimento deve ser informada</string>
    <string name="sexo_obrigatorio">O sexo deve ser informado</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="dtnascimento">Data de nascimento</string>
    <string name="estadocivil">Estado civil</string>
    <string name="ativo">Ativo</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="consultar">Consultar</string>
    <string name="alterar">Alterar</string>
    <string name="deletar">Deletar</string>
    <string name="editar">Editar</string>
    <string name="solteiro">Solteiro(a)</string>
    <string name="casado">Casado(a)</string>
    <string name="viuvo">Viuvo(a)</string>
    <string name="divorciado">Divorciado(a)</string>
    <string name="salvo_ok">Registro salvo com sucesso</string>
    <string name="registroativo">Registro ativo:SIM</string>
    <string name="registroinativo">Registro ativo:NÃO</string>
    <string name="registrodeletado">Registro excluido cmosucesso!</string>



</resources>
